# learn-opengl

./: 00_hello_window.cpp  CMakeLists.txt  camera.hpp  main.cpp  shader.cpp  shader.h  shader.hpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
